cli/testdata/invalid-modules/no-components/cue.mod/module.cue
module: "opm.test/no-components@v0"
language: {
	version: "v0.15.0"
}
deps: {
	"opm.dev/core@v1": {
		v: "v1.0.0"
	}
}
